# SquareAttack

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: Duck.cpp  Duck.h  main.cpp  square.cpp  square.h
